--- a/h5/css/style.css
+++ b/h5/css/style.css
@@ -368,3 +368,40 @@ footer .bottom0 span p{font-size:.3rem;margin-top:.12rem;}
 .messagesList p{font-size:.28rem;color:#333;margin-top:.26rem;}
 .messagesList .successMes{color:#2e8cee;}
 .messagesList .defeatedMes{color:#fe7e6c;}
+
+
+
+/**分享box***/
+.share_bg{position:fixed;top:0;left:0;bottom:0;right:0;background:rgba(0,0,0,0.2);z-index:111;}
+.share_box {position: absolute; left:0; bottom: 0; background: #fff;}
+.share_box .title{height:40px; line-height: 40px; font-size:.32rem; position: relative; }
+.share_box .title  h3{
+	text-align: center;
+	height:40px; line-height: 40px; 
+}
+.share_box .list{display: flex; width:100%; padding:.5rem .3rem; box-sizing: border-box;}
+.share_box .list .item{width:20%;  box-sizing: border-box; padding:.1rem; text-align: center;}
+.share_box .list .item img{width:100%;}
+.share_box .list .item span{font-size:12px;}
+.share_box .list .item .i_bg{width:100%; display: inline-block; height:1rem; background-size: contain;background-repeat: no-repeat;}
+.share_box .share_closer{
+	position: absolute;
+	right:0;
+	top:0;
+	display: inline-block;
+	width:40px;
+	height:40px;
+	background:url('../images/1-5gbi.png') no-repeat;
+	background-position: 10px 10px;
+	background-size: 40% 40%;
+}
+
+/*下拉底部弹出*/
+.actionsheet{position:fixed;top:0;left:0;bottom:0;right:0;background:rgba(0,0,0,0.2);z-index:111;}
+.actionsheetBox{width:7.1rem;border-radius:.15rem;background:#fff;overflow:hidden;left:.2rem;position:absolute;bottom:.16rem;}
+.actionsheetBox h3{height:.8rem;line-height:.8rem;text-align:center;color:#666;font-size:.32rem;}
+.actionsheetBox h3 span:before,
+.actionsheetBox h3 span:after{content:'-';margin:0 .1rem;}
+.actionsheetContent p{height:.84rem;line-height:.84rem;color:#333;font-size:.3rem;border-top:1px solid #eee;text-align:center;}
+.actionsheetContent p:active,
+.actionsheetContent p.active{background:#2e8cee;color:#fff;}
