--- a/h5/css/style.css
+++ b/h5/css/style.css
@@ -372,7 +372,13 @@ footer .bottom0 span p{font-size:.3rem;margin-top:.12rem;}
 
 
 /**分享box***/
-.share_bg{position:fixed;top:0;left:0;bottom:0;right:0;background:rgba(0,0,0,0.2);z-index:111;}
+.share_bg{position:fixed;top:0;left:0;bottom:0;right:0;background:rgba(0,0,0,0.4);z-index:111;}
+#arrow{
+	position: absolute;
+	top:0;
+	right: 0;
+	width:40%;
+}
 .share_box {position: absolute; left:0; bottom: 0; background: #fff;}
 .share_box .title{height:40px; line-height: 40px; font-size:.32rem; position: relative; }
 .share_box .title  h3{
