--- a/h5/css/style.css
+++ b/h5/css/style.css
@@ -299,7 +299,7 @@ div.mt_76{margin-top:.76rem!important;}
 .detailsSum p{line-height:1;}
 .detailsSum>div{margin-top:.22rem;}
 .detailsSum img{width:1rem;height:1rem;border-radius:50%;vertical-align:middle;}
-.detailsSum span{vertical-align:middle;margin-left:.3rem;width:2.5rem;display:inline-block;}
+.detailsSum span{vertical-align:middle;margin-left:.3rem;width:2rem;display:inline-block;}
 .detailsSum div div{float:right;line-height:1;margin-top:.39rem;}
 
 /*我的分销*/
@@ -411,3 +411,7 @@ footer .bottom0 span p{font-size:.3rem;margin-top:.12rem;}
 .actionsheetContent p{height:.84rem;line-height:.84rem;color:#333;font-size:.3rem;border-top:1px solid #eee;text-align:center;}
 .actionsheetContent p:active,
 .actionsheetContent p.active{background:#2e8cee;color:#fff;}
+
+
+.no_empty{text-align: center; padding-top: 2rem;}
+.no_empty h4{font-size:.36rem; margin-bottom: 0.5rem;}
