--- a/h5/css/style.css
+++ b/h5/css/style.css
@@ -164,7 +164,7 @@ footer .enter{text-align:center;background:url(../images/1-dc.png)no-repeat cent
 /*分享*/
 .m-code{margin:.5rem 0 .44rem 0;text-align:center;}
 .m-code img{width:2.7rem;height:2.7rem;}
-.m-img-tip{width:6.75rem;margin:0.5rem auto .4rem; border-top:1px solid #ddd;}
+.m-img-tip{width:6.75rem;margin:0.5rem auto .4rem; border-top:1px solid #ddd; text-align: center;}
 .m-img-tip img{width:100%;height:100%;}
 .m-img-tip .img_tip_i{
 	position: relative;
