--- a/h5/css/style.css
+++ b/h5/css/style.css
@@ -382,7 +382,15 @@ footer .bottom0 span p{font-size:.3rem;margin-top:.12rem;}
 .salesInfo dl{margin-top:.14rem;}
 
 /*系统消息*/
-.messages{margin:1.08rem auto;width:6.7rem;}
+.messages{
+	position: absolute;
+    top: 1.08rem;
+    bottom: 1.08rem;
+    width: 100%;
+    left: 50%;
+    box-sizing: border-box;
+    transform: translate(-50%,0);
+}
 .messagesDate{font-size:.32rem;color:#999;text-align:center;margin-bottom:.26rem;}
 .messagesList{padding:.28rem .4rem;box-shadow:0 .04rem .2rem .03rem rgba(206,226,246,.8);margin-bottom:.2rem;}
 .messagesList h3{font-size:.3rem;line-height:1;color:#333;}
@@ -444,3 +452,108 @@ button[disabled]{
 	width:6.7rem;
     margin: .52rem auto .24rem;
 }
+#scroller {
+	position:absolute; z-index:1;
+/*	-webkit-touch-callout:none;*/
+	-webkit-tap-highlight-color:rgba(0,0,0,0);
+	width:100%;
+	padding:0;
+}
+
+
+/**
+ *
+ * Pull down styles
+ *
+ */
+#pullDown, #pullUp {
+	background:#fff;
+	height:40px;
+	line-height:40px;
+	padding:5px 10px;
+	font-weight:bold;
+	font-size:14px;
+	color:#888;
+	text-align: center;
+    width: 100%;
+    box-sizing: border-box;
+	vertical-align: top;
+}
+.pullDownLabel{
+	vertical-align: top;
+}
+.pullUpLabel{
+	vertical-align: top;
+}
+#pullDown .pullDownIcon, #pullUp .pullUpIcon  {
+	display:inline-block;
+	width:40px; height:40px;
+	background:url("../images/pull-icon@2x.png") 0 0 no-repeat;
+	-webkit-background-size:40px 80px; background-size:40px 80px;
+	-webkit-transition-property:-webkit-transform;
+	-webkit-transition-duration:250ms;	
+}
+#pullDown .pullDownIcon {
+	-webkit-transform:rotate(0deg) translateZ(0);
+}
+#pullUp .pullUpIcon  {
+	-webkit-transform:rotate(-180deg) translateZ(0);
+}
+
+#pullDown.flip .pullDownIcon {
+	-webkit-transform:rotate(-180deg) translateZ(0);
+}
+
+#pullUp.flip .pullUpIcon {
+	-webkit-transform:rotate(0deg) translateZ(0);
+}
+
+#pullDown.loading .pullDownIcon, #pullUp.loading .pullUpIcon {
+	background-position:0 100%;
+	-webkit-transform:rotate(0deg) translateZ(0);
+	-webkit-transition-duration:0ms;
+
+	-webkit-animation-name:loading;
+	-webkit-animation-duration:2s;
+	-webkit-animation-iteration-count:infinite;
+	-webkit-animation-timing-function:linear;
+}
+
+@-webkit-keyframes loading {
+	from { -webkit-transform:rotate(0deg) translateZ(0); }
+	to { -webkit-transform:rotate(360deg) translateZ(0); }
+}
+#thelist{
+	width:100%;
+	box-sizing: border-box;
+	padding:0 10%;
+}
+
+#listWrap{
+	box-sizing: border-box;
+	position: absolute;
+	top:1rem;
+	left:50%;
+	bottom:0;
+	right:0;
+	width: 100%;
+	transform: translate(-50%,0);
+	padding:0;
+}
+
+#thelistRelease{
+	width:100%;
+	box-sizing: border-box;
+	padding:0 0.3rem;
+}
+/*#wrapper {
+	position:absolute; 
+	z-index:1;
+	top:100px;
+	left:12%;
+	height:400px;
+	width:80%;
+	background:#aaa;
+	border:1px red solid;
+}
+*/
