--- a/h5/css/style.css
+++ b/h5/css/style.css
@@ -295,7 +295,7 @@ dd.industryAdd em i{position:absolute;width:.38rem;height:.38rem;background:url(
 .model div strong{color:#ff2525;}
 .model div em{color:#2e8cee;}
 .model div .fr{font-size:.26rem;color:#999;}
-.nothing{text-align:center;}
+.nothing{text-align:center; position: relative;}
 .nothing img{width:2.2rem;height:2.41rem;margin-top:1.12rem;margin-bottom:.24rem;vertical-align:middle;}
 .nothing p{font-size:.32rem;color:#333;line-height:1;}
 .nothing a{margin-top:.32rem;color:#2e8cee;font-size:.32rem;}
