--- a/h5/css/style.css
+++ b/h5/css/style.css
@@ -101,7 +101,7 @@ button{font-size:.32rem;text-align:center;color:#fff;width:6rem;height:.88rem;bo
 /*易创链首页*/
 .g-head{height:4rem;width:100%;position:relative;color:#333;text-align:center;}
 .g-head h3{font-size:.5rem;font-weight:bold;letter-spacing:.1rem;position:absolute;top:.9rem;width:100%;}
-.g-head p{line-height:1;font-size:.3rem;letter-spacing:.04rem;position:absolute;top:1.72rem;width:100%;}
+.g-head p{line-height: .40rem;  font-size: .3rem;  letter-spacing: .04rem;  position: absolute;  top: 1.72rem;  width: 90%;margin-left: 5%;}
 .banner{background:#fff;position:absolute;width:100%;height:1.5rem;bottom:0;z-index:99;overflow:hidden;}
 .g-content{text-align:center;margin-top:.75rem;margin-bottom:3.7rem;}
 .subTitle{text-align:center;}
@@ -110,7 +110,7 @@ button{font-size:.32rem;text-align:center;color:#fff;width:6rem;height:.88rem;bo
 .m-section img{width:2.6rem;}
 .m-section div{position:relative;width:5rem;margin:0 auto .25rem;}
 .m-section h3{font-size:.3rem;color:#333;position:absolute;}
-.m-section p{font-size:.26rem;color:#666;line-height:1;position:absolute;}
+.m-section p{font-size:.26rem;color:#666;line-height:1;position:absolute;text-align: left;  line-height: .36rem;}
 .m-section div:nth-child(odd) img{margin-left:1.15rem;}
 .m-section div:nth-child(odd) h3{top:.45rem;left:2.65rem;}
 .m-section div:nth-child(odd) p{top:1.05rem;left:2.65rem;}
