--- a/h5/css/style.css
+++ b/h5/css/style.css
@@ -108,7 +108,7 @@ button{font-size:.32rem;text-align:center;color:#fff;width:6rem;height:.88rem;bo
 .subTitle h3{color:#333;font-size:.32rem;}
 .subTitle span{width:.8rem;height:.04rem;background:#2e8cee;margin:.2rem 0;display:inline-block;}
 .m-section img{width:2.6rem;}
-.m-section div{position:relative;width:5rem;margin:0 auto .25rem;}
+.m-section div{position:relative;width:5rem;margin:0 auto .4rem;}
 .m-section h3{font-size:.3rem;color:#333;position:absolute;}
 .m-section p{font-size:.26rem;color:#666;line-height:1;position:absolute;text-align: left;  line-height: .36rem;}
 .m-section div:nth-child(odd) img{margin-left:1.15rem;}
@@ -127,7 +127,7 @@ button{font-size:.32rem;text-align:center;color:#fff;width:6rem;height:.88rem;bo
 .m-img img{width:100%;height:100%;}
 .m-article{margin:0 .66rem;}
 .m-article img{width:4.9rem;height:3.4rem;margin:.35rem auto;}
-.m-article h3{font-size:.3rem;color:#333;text-align:left;line-height:.4rem;}
+.m-article h3{font-size:.3rem;color:#333;text-align:center;line-height:.4rem;}
 .m-article p{font-size:.26rem;color:#666;text-align:left;margin-top:.15rem;line-height:.43rem;}
 footer{width:100%;position:fixed;bottom:0;}
 footer .enter{text-align:center;background:url(../images/1-dc.png)no-repeat center .9rem;background-size:100%;height:2.3rem;width:100%;position:absolute;left:0;bottom:1.1rem;}
